# analyseur-litteraire

./: .gitignore  README.md  pyproject.toml  test_pull_request
.github/workflows/: ci.yml
src/: adapter.py  analyseurs.py  corpus.py  documents.py  exceptions.py  export.py  nettoyeur.py  texte.py
tests/: test.csv  test_adapter.py  test_example.py  test_export.py  test_nettoyage.py  test_texte.py
